Add the POST /nodes and swagger defs
